--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -35,6 +35,7 @@ button {
 ul,
 ol {
     list-style: none;
+    padding-left: 10px;
 }
 
 // Global Classes
